--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
     - name: Setup Poetry
       uses: snok/install-poetry@v1
       with:
-          version: 1.5.1
+          version: latest
           virtualenvs-in-project: true
           virtualenvs-create: true
           installer-parallel: true
